End of section 11

--- a/DatingApp.API/appsettings.json
+++ b/DatingApp.API/appsettings.json
@@ -10,5 +10,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dglheigds",
+    "ApiKey": "722562264113431",
+    "ApiSecret": "yMBXZUSDeMzWDB3vUWrLq7hCoCg"
+  }
 }
