End of session 17.8

--- a/MyFriendsApp.API/appsettings.json
+++ b/MyFriendsApp.API/appsettings.json
@@ -1,9 +1,9 @@
 {
   "AppSettings": {
-    "Token": "Super secret key"
+    "Token": "Kel* Super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MyFriendsApp.db"
+    "DefaultConnection": "Server=localhost; Database=MyFriendsApp; Uid=kel; Pwd=Kql*28191210"
   },
   "Logging": {
     "LogLevel": {
