End of session 20/22

--- a/MyFriendsApp.API/appsettings.Development.json
+++ b/MyFriendsApp.API/appsettings.Development.json
@@ -6,7 +6,7 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionStrings": {
-    "DefaultConnection": "Data Source=MyFriendsApp.db"
-  }
+  // "ConnectionStrings": {
+  //   "DefaultConnection": "Data Source=MyFriendsApp.db"
+  // }
 }
