--- a/MyFriendsApp.API/appsettings.json
+++ b/MyFriendsApp.API/appsettings.json
@@ -3,8 +3,11 @@
     "Token": "Kel* Super secret key"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost; Database=MyFriendsApp; Uid=kel; Pwd=Kql*28191210"
+    "DefaultConnection": "Data Source=MyFriendsApp.db"
   },
+  // "ConnectionStrings": {
+  //   "DefaultConnection": "Server=localhost; Database=MyFriendsApp; Uid=kel; Pwd=Kql*28191210"
+  // },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
